@@ -6148,6 +6148,12 @@ if test "$wxUSE_DATETIME" = "yes"; then
 fi
 
 dnl ------------------------------------------------------------------------
+dnl wxProcess
+dnl ------------------------------------------------------------------------
+
+AC_CHECK_FUNCS(setpriority)
+
+dnl ------------------------------------------------------------------------
 dnl wxSocket
 dnl ------------------------------------------------------------------------
 
